--- a/source/stylesheets/maintenance.sass
+++ b/source/stylesheets/maintenance.sass
@@ -8,16 +8,16 @@
   .maintenance-content
     display: flex
     flex-direction: column
-    gap: 80px
+    gap: var(--margin-size)
     max-width: 720px
     margin: 0 auto
 
   h1
-    font-size: 3.75em
+    font-size: 3.75rem
 
   .maintenance-message
     border: 1px solid var(--border-color)
     border-radius: var(--border-radius)
     padding: 32px
-    font-size: 1.25em
+    font-size: 1.25rem
     font-weight: 700
