--- a/source/stylesheets/overlay.sass
+++ b/source/stylesheets/overlay.sass
@@ -49,7 +49,7 @@
 
   .overlay-page-list
     text-align: left
-    font-size: 20px
+    font-size: 1.25rem
     font-weight: 700
     display: flex
     flex-direction: column
