--- a/source/stylesheets/announcement.sass
+++ b/source/stylesheets/announcement.sass
@@ -2,18 +2,23 @@
   background-color: var(--announcement-background-color)
   color: var(--announcement-text-color)
   display: none
-  font-size: .925em
-  padding: 12px 144px
+  font-size: 1rem
+  padding: 22px 96px
+  line-height: 1.25em
   position: relative
   text-align: center
   width: 100%
   z-index: 1
+  align-items: center
+  justify-content: center
 
   @media screen and (max-width: $break-small)
-    padding: 16px 88px
+    padding: 14px 64px 14px 16px
+    justify-content: flex-start
+    text-align: left
 
   &.visible
-    display: block
+    display: flex
 
   &__close-button
     transform: translateY(-50%)
@@ -24,12 +29,12 @@
     height: 32px
     padding: 0
     position: absolute
-    right: 16px
+    right: 32px
     top: 50%
     width: 32px
 
     @media screen and (max-width: $break-small)
-      right: 8px
+      right: 16px
 
   &__close-icon
     height: 14px
