--- a/source/stylesheets/contact.sass
+++ b/source/stylesheets/contact.sass
@@ -17,7 +17,7 @@ input, textarea
   border: 1px solid var(--text-color)
   font-weight: normal
   width: 100%
-  font-size: 1em
+  font-size: 1rem
   padding: 12px
 
 textarea
@@ -25,7 +25,7 @@ textarea
   resize: vertical
 
 .recaptcha-note
-  font-size: .925em
+  font-size: .925rem
   text-align: center
 
   a
