--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -165,7 +165,9 @@ header
   text-align: center
   font-family: var(--primary-font)
   font-weight: 700
+  overflow-wrap: break-word
   word-break: break-word
+  color: var(--header-text-color)
 
 .store-logo
   max-height: var(--logo-max-height)
@@ -174,6 +176,7 @@ header
     max-height: var(--logo-max-height-mobile)
 
 h1, h2, h3, h4, h5, h6
+  color: var(--header-text-color)
   font-family: var(--primary-font)
   font-weight: 700
 
