--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -46,6 +46,7 @@
       display: grid
       grid-template-columns: 1fr 360px
       column-gap: 64px
+      display: block
 
       @media screen and (max-width: $break-medium)
         grid-template-columns: 1fr 1fr
