--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -49,7 +49,16 @@
   @media screen and (max-width: $break-medium)
     margin-top: 48px
 
-.similar-product-list
+.related-products-header
+  display: flex
+  align-items: center
+
+  .related-products-view-all-link
+    margin-left: auto
+    font-weight: 700
+    text-decoration: underline
+
+.related-product-list
   --columns: 4
 
   @media screen and (max-width: $break-medium)
