--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -24,6 +24,17 @@
   button
     max-width: 100%
 
+  .select
+    margin: 0
+
+.product_option_groups
+  display: flex
+  flex-direction: column
+  gap: 16px
+
+.product-selects
+  margin-bottom: 36px
+
 .product-detail
   display: flex
   flex-direction: column
@@ -42,6 +53,9 @@
 
   h1
     margin-bottom: 0 !important
+
+#instant-checkout-button
+  margin-top: 12px
 
 .related-products-container
   margin-top: var(--margin-size)
