--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -10,6 +10,7 @@
   --button-hover-background-color: #{'{{ theme.button_hover_background_color }}'}
   --button-text-color: #{'{{ theme.button_text_color }}'}
 
+  --category-overlay-color: #{'rgba(var(--product-hover-overlay-color-rgb), .4)'}
   --product-hover-overlay-color: #{'rgba(var(--product-hover-overlay-color-rgb), .8)'}
   --product-hover-text-color: #{'{{ theme.product_hover_text_color }}'}
 
