--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -39,6 +39,23 @@
   &--alternating
     row-gap: var(--margin-size)
 
+    .fixed-height
+      @media screen and (min-width: $break-small + 1)
+        height: 460px
+
+        > *
+          height: 460px
+
+        .product-list-image-container
+          padding-bottom: 0
+
+    .original-dimensions
+      .product-list-image-container
+        padding-bottom: 0
+
+      .product-list-image
+        position: relative
+
     .product-list-thumb
       width: 100%
 
@@ -49,6 +66,7 @@
 
       @media screen and (max-width: $break-medium)
         grid-template-columns: 1fr 1fr
+        column-gap: 32px
 
       @media screen and (max-width: $break-small)
         grid-template-columns: 1fr
@@ -143,6 +161,34 @@ a.product-list-link
           opacity: 1
           visibility: visible
 
+.category-link:not(.category-link--under_image)
+  color: var(--button-text-color)
+  display: block
+
+  .product-list-image-container
+    .product-list-thumb-status
+      display: none
+
+  .product-list-thumb-info
+    position: absolute
+    border-radius: var(--border-radius)
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    z-index: 2
+    padding: 24px
+    background: var(--category-overlay-color)
+    display: flex
+    align-items: center
+    justify-content: center
+    flex-direction: column
+
+    .product-list-thumb-status
+      display: block
+      position: relative
+      top: auto
+      right: auto
 
 .product-list-image-container
   margin: 0
@@ -244,8 +290,12 @@ a.product-list-link
   display: flex
   gap: 24px
 
+  .current
+    text-decoration: underline
+
   > a, span
     padding: 0 8px
+    text-underline-offset: 2px
 
 .pagination-arrow
   display: block
