--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -82,6 +82,7 @@
       flex-direction: column
       gap: 12px
       padding: 0
+      text-align: left
 
       @media screen and (max-width: $break-small)
         align-items: center
