--- a/source/stylesheets/search.sass
+++ b/source/stylesheets/search.sass
@@ -33,7 +33,7 @@
     align-items: center
     justify-content: center
     flex-direction: column
-    padding: 48px 32px
+    padding: 16px 32px 32px 32px
     max-width: 800px
     position: relative
     margin: 0 auto
