--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -37,12 +37,11 @@
     .home-hero-content, .home-hero-overlay, .home-hero-image
       border-radius: var(--border-radius)
 
-      @media screen and (max-width: $break-small)
-        border-radius: 0
-
   @media screen and (max-width: $break-small)
     min-height: auto
     height: auto
+    margin-top: 16px
+    margin-bottom: 48px
 
 .home-hero-image
   object-fit: contain
