--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -92,7 +92,9 @@ header
 
   @media screen and (max-width: $break-small)
     --side-padding: 16px
-    padding: 48px var(--side-padding)
+    padding: 32px var(--side-padding)
+    font-size: 3rem
+    line-height: normal
 
 .top-nav
   display: flex
