--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -86,6 +86,7 @@
 
       @media screen and (max-width: $break-small)
         align-items: center
+        text-align: center
         padding: 24px 0 0
 
     .product-list-shop-now
@@ -150,6 +151,7 @@ a.product-list-link
         justify-content: center
         flex-direction: column
         transition: opacity .2s ease, visibility .2s ease
+        color: var(--product-hover-text-color)
 
         .product-list-thumb-status
           display: block
