--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -100,10 +100,16 @@
     justify-content: center
     flex-direction: column
     width: 148px
+    gap: 8px
 
     @media (max-width: $break-medium)
-      align-items: flex-start
+      align-items: center
       grid-area: 2 / 2 / 3 / 4
+      justify-content: flex-start
+      flex-direction: row
+      width: 100%
+      gap: 24px
+
 
   .qty-holder
     display: flex
@@ -111,7 +117,6 @@
     border: 1px solid var(--text-color)
     border-radius: var(--border-radius)
     gap: 8px
-    margin-bottom: 8px
 
     &.disabled
       > *
@@ -146,13 +151,15 @@
     padding: .5em
     line-height: 1em
     font-weight: normal
-    font-size: .875em
+    font-size: .925em
     padding: 8px 16px
     text-decoration: underline
     width: auto
 
     @media (max-width: $break-medium)
       padding: 4px 0
+      font-size: .925em
+      margin-left: auto
 
   .cart-item-price
     font-size: 1em
@@ -161,11 +168,10 @@
     min-height: 42px
     display: flex
     justify-content: flex-end
-    align-items: center
     text-align: right
 
     @media screen and (max-width: $break-medium)
-      font-size: 1.3rem
+      font-size: 1.2rem
       min-height: 0
       min-width: 0
       grid-area: 1 / 3 / 2 / 4
@@ -187,9 +193,12 @@
 .cart-subtotal
   display: flex
   gap: 16px
-  font-size: 1.5rem
+  font-size: 1.25rem
   align-items: flex-start
   width: 100%
+
+  &__label
+    font-weight: 700
 
   &__amount
     margin-left: auto
