--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -179,6 +179,7 @@ h1, h2, h3, h4, h5, h6
   color: var(--header-text-color)
   font-family: var(--primary-font)
   font-weight: 700
+  line-height: normal
 
 #main
   flex: 1
