--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -40,6 +40,12 @@
   flex-direction: column
   row-gap: 36px
 
+  &__header
+    display: flex
+    flex-direction: column
+    row-gap: 8px
+    align-items: flex-start
+
   &__status
     border-radius: var(--border-radius-sm)
     color: var(--product-status-text-color)
@@ -49,7 +55,8 @@
     line-height: normal
     font-weight: 500
     display: inline-block
-    padding: 5px 6px
+    padding: 6px
+    letter-spacing: 1.1px
 
   h1
     margin-bottom: 0 !important
