--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -101,11 +101,13 @@
     color: var(--hero-overlay-color)
     text-decoration: none
 
+.home-featured-products
+  margin-bottom: var(--margin-size)
+
 a.all-products-button
   margin-top: 48px
 
 .featured-categories
-  margin-top: var(--margin-size)
 
   h2
     text-align: center
