--- a/source/stylesheets/announcement.sass
+++ b/source/stylesheets/announcement.sass
@@ -13,9 +13,7 @@
   justify-content: center
 
   @media screen and (max-width: $break-small)
-    padding: 14px 64px 14px 16px
-    justify-content: flex-start
-    text-align: left
+    padding: 14px 64px
 
   &.visible
     display: flex
