--- a/source/stylesheets/product-carousel.sass
+++ b/source/stylesheets/product-carousel.sass
@@ -156,7 +156,8 @@
         width: 100%
         object-fit: cover
 
-.gallery-link
+a.gallery-link
+  cursor: zoom-in
   display: block
 
 .product-thumbnails-buttons-container
@@ -337,7 +338,6 @@
   right: 10px
   bottom: 10px
   font-size: .8rem
-  z-index: 10
   background: var(--current-slide-background)
   color: var(--current-slide-color)
   padding: 6px 8px
