feat: setting for primary vs secondary product status badge

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -25,8 +25,10 @@
   --announcement-background-color: #{'{{ theme.announcement_background_color }}'}
   --announcement-text-color: #{'{{ theme.announcement_text_color }}'}
 
-  --product-status-background-color: #{'{{ theme.product_status_background_color }}'}
-  --product-status-text-color: #{'{{ theme.product_status_text_color }}'}
+  --product-status-background-color-primary: #{"{{ theme.product_status_background_color_primary }}"}
+  --product-status-text-color-primary: #{"{{ theme.product_status_text_color_primary }}"}
+  --product-status-background-color-secondary: #{"{{ theme.product_status_background_color_secondary }}"}
+  --product-status-text-color-secondary: #{"{{ theme.product_status_text_color_secondary }}"}
 
   --primary-font: #{"{{ theme.primary_font | font_family }}"}
   --secondary-font: #{"{{ theme.secondary_font | font_family }}"}
