--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -224,9 +224,7 @@ a.product-list-link
     object-fit: contain
 
 .product-list-thumb-status
-  background: var(--product-status-background-color)
   border-radius: var(--border-radius-sm)
-  color: var(--product-status-text-color)
   top: 16px
   right: 16px
   font-size: .925rem
@@ -237,6 +235,14 @@ a.product-list-link
   text-transform: uppercase
   padding: 6px
   z-index: 2
+
+  &.status-primary
+    background: var(--product-status-background-color-primary)
+    color: var(--product-status-text-color-primary)
+
+  &.status-secondary
+    background: var(--product-status-background-color-secondary)
+    color: var(--product-status-text-color-secondary)
 
 .product-list-thumb-info
   line-height: normal
