--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -29,7 +29,6 @@
 .continue-shopping
   font-size: .925rem
   margin-left: auto
-  text-decoration: underline
 
 .cart-items
   border-bottom: 1px solid var(--border-color)
@@ -153,7 +152,6 @@
     font-weight: normal
     font-size: .925em
     padding: 8px 16px
-    text-decoration: underline
     width: auto
 
     @media (max-width: $break-medium)
@@ -189,6 +187,13 @@
     margin-top: 24px
     padding: 0
     border: 0
+
+.cart-footer-secondary
+
+  a
+    max-width: 100%
+    width: 100%
+    font-size: 0.90rem
 
 .cart-subtotal
   display: flex
