--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -75,10 +75,10 @@
   margin-top: 12px
 
 .related-products-container
-  margin-top: var(--margin-size)
+  margin-top: calc(var(--margin-size) * 2)
 
   @media screen and (max-width: $break-medium)
-    margin-top: 48px
+    margin-top: calc(var(--margin-size) * 1.5)
 
 .related-products-header
   display: flex
