chore: featured categories header smaller font on smallest breakpoint

--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -115,5 +115,8 @@ a.all-products-button
     font-weight: 600
     font-size: 2rem
 
+    @media screen and (max-width: $break-small)
+      font-size: 1.75rem
+
 .category-list
   --columns: #{"{{ theme.max_categories_per_row }}"}
