feat: use the new drop to power related products module

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -96,4 +96,7 @@
   --columns: 4
 
   @media screen and (max-width: $break-medium)
+    --columns: 3
+  
+  @media screen and (max-width: $break-small)
     --columns: 2
