chore: adjust breakpoint layout slightly
don't snap too early to single column

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -5,6 +5,9 @@
   row-gap: 40px
 
   @media screen and (max-width: $break-medium)
+    grid-template-columns: 1fr 325px
+
+  @media screen and (max-width: $break-small)
     grid-template-columns: minmax(0, 1fr)
 
 .product-breadcrumb
