--- a/source/stylesheets/_config.sass
+++ b/source/stylesheets/_config.sass
@@ -1,6 +1,7 @@
 @import 'flexbox'
 
-$break-medium: 1080px
+$break-large: 1080px
+$break-medium: 900px
 $break-small: 768px
 $break-extra-small: 640px
 
