--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -13,7 +13,7 @@
   grid-template-columns: 662px 1fr
   column-gap: 64px
 
-  @media screen and (max-width: $break-medium)
+  @media screen and (max-width: $break-large)
     grid-template-columns: 1fr
 
 .cart-header
@@ -42,12 +42,12 @@
   padding: 24px 0
   gap: 16px
 
-  @media (max-width: $break-medium)
+  @media (max-width: $break-large)
     grid-template-columns: auto 1fr auto
     grid-template-rows: repeat(2, auto)
 
   .cart-item-image-holder
-    @media screen and (max-width: $break-medium)
+    @media screen and (max-width: $break-large)
       grid-area: 1 / 1 / 3 / 2
 
   .cart-item-image-link
@@ -56,7 +56,7 @@
     overflow: hidden
     width: 90px
 
-    @media screen and (max-width: $break-medium)
+    @media screen and (max-width: $break-large)
       height: 64px
       width: 64px
 
@@ -69,7 +69,7 @@
   .cart-item-detail
     padding-right: 24px
 
-    @media (max-width: $break-medium)
+    @media (max-width: $break-large)
       grid-area: 1 / 2 / 2 / 3
       padding-right: 0
 
@@ -101,7 +101,7 @@
     width: 148px
     gap: 8px
 
-    @media (max-width: $break-medium)
+    @media (max-width: $break-large)
       align-items: center
       grid-area: 2 / 2 / 3 / 4
       justify-content: flex-start
@@ -154,7 +154,7 @@
     padding: 8px 16px
     width: auto
 
-    @media (max-width: $break-medium)
+    @media (max-width: $break-large)
       padding: 4px 0
       font-size: .925em
       margin-left: auto
@@ -168,7 +168,7 @@
     justify-content: flex-end
     text-align: right
 
-    @media screen and (max-width: $break-medium)
+    @media screen and (max-width: $break-large)
       font-size: 1.2rem
       min-height: 0
       min-width: 0
@@ -183,7 +183,7 @@
   gap: 2rem
   padding: 24px
 
-  @media screen and (max-width: $break-medium)
+  @media screen and (max-width: $break-large)
     margin-top: 24px
     padding: 0
     border: 0
