feat: new custom footer text setting
Allows custom content to be added to global footer with setting to control position

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -270,11 +270,14 @@ footer
     margin: 0 auto
 
     @media screen and (max-width: $break-small)
-      padding: 0 16px
+      padding: 0 16px 30px 16px
 
     @media screen and (max-width: $break-extra-small)
       flex-direction: column
       padding: 30px
+
+.footer-custom-content
+  text-align: center
 
 .footer-nav
   display: flex
