--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -278,6 +278,7 @@ footer
 
 .footer-custom-content
   text-align: center
+  padding: 10px 16px 40px 16px
 
 .footer-nav
   display: flex
@@ -384,6 +385,26 @@ footer
   padding-top: 10px
   margin: 0
 
+  @media screen and (max-width: $break-medium)
+    margin: 0 auto
+    width: 100%
+    text-align: center
+
+  @media screen and (max-width: $break-small)
+    margin-left: 16px
+    width: auto
+    text-align: left
+
+  &--primary
+    @media screen and (max-width: $break-medium)
+      display: none
+
+  &--secondary
+    display: none
+
+    @media screen and (max-width: $break-medium)
+      display: inline
+
   .bigcartel-credit
     line-height: 1em
     font-size: .875rem
@@ -394,9 +415,12 @@ footer
     padding: 2px 0
     text-decoration: none
 
-    @media screen and (max-width: $break-extra-small)
+    @media screen and (max-width: $break-medium)
+      font-size: 15px
       flex-direction: row
       align-items: center
+      justify-content: center
+      width: 100%
 
     &__text
       position: relative
