--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -106,6 +106,8 @@
 
 a.all-products-button
   margin-top: 48px
+  min-width: 200px
+  max-width: 50%
 
 .featured-categories
 
@@ -118,5 +120,22 @@ a.all-products-button
     @media screen and (max-width: $break-small)
       font-size: 1.75rem
 
-.category-list
-  --columns: #{"{{ theme.max_categories_per_row }}"}
+  .category-list
+    --columns: #{"{{ theme.max_categories_per_row }}"}
+
+    &--text 
+      gap: 20px
+      --columns: 1
+
+      .button
+        display: block
+        max-width: 300px
+        white-space: nowrap
+        overflow: hidden
+        text-overflow: ellipsis
+        text-align: center
+        margin: 0
+
+        @media screen and (max-width: $break-small)
+          max-width: 80%
+          min-width: 200px
