--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -32,6 +32,8 @@
   --product-status-background-color-secondary: #{"{{ theme.product_status_background_color_secondary }}"}
   --product-status-text-color-secondary: #{"{{ theme.product_status_text_color_secondary }}"}
 
+  --inventory-status-text-color: #{"{{ theme.inventory_status_text_color }}"}
+
   --primary-font: #{"{{ theme.primary_font | font_family }}"}
   --secondary-font: #{"{{ theme.secondary_font | font_family }}"}
 
