fix: big cartel credit use text-color vs link color

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -415,6 +415,7 @@ footer
     gap: 8px
     outline-offset: 4px
     padding: 2px 0
+    color: var(--text-color)
     text-decoration: none
 
     @media screen and (max-width: $break-medium)
