--- a/source/stylesheets/contact.sass
+++ b/source/stylesheets/contact.sass
@@ -30,3 +30,27 @@ textarea
 
   a
     text-decoration: underline
+
+.message-banner
+  &--contact
+    color: var(--text-color)
+    background-color: unset
+    padding: 0
+    text-align: center
+    width: 100%
+
+    a
+      display: inline
+      white-space: nowrap
+
+    ul
+      list-style: none
+      padding: 0
+      margin: 10px 0
+      
+    li
+      text-align: center
+    
+    img
+      display: block
+      margin: 10px auto
