--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -279,8 +279,11 @@ footer
       padding: 30px
 
 .footer-custom-content
+  display: flex
+  justify-content: center
+  align-items: center
   text-align: center
-  padding: 10px 16px 20px 16px
+  padding: 10px 50px 20px 50px
 
 .footer-nav
   display: flex
