--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -279,11 +279,15 @@ footer
       padding: 30px
 
 .footer-custom-content
-  display: flex
+  display: grid
+  grid-template-columns: 1fr
   justify-content: center
-  align-items: center
   text-align: center
   padding: 10px 50px 20px 50px
+  gap: 20px
+
+  > *
+    justify-self: center
 
 .footer-nav
   display: flex
