--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -1,3 +1,8 @@
+\:root
+  --pagination-background: transparent
+  --pagination-page-background: var(--text-color)
+  --pagination-active-page: var(--text-color)
+
 .home-hero
   display: grid
   position: relative
@@ -16,6 +21,9 @@
   &--no-image
     min-height: 600px
     padding: 48px 0
+  
+  &--slideshow
+    padding: 0
 
   &--full-page
     height: 600px
@@ -77,11 +85,20 @@
   top: 0
   z-index: 3
 
+  @media screen and (max-width: $break-small)
+    gap: 20px
+
 .home-hero-text
   font-size: 2rem
   font-weight: 700
   text-align: center
   max-width: calc(1080px + calc(var(--side-padding) * 2))
+
+  @media screen and (max-width: $break-medium)
+    font-size: 1.6rem
+
+  @media screen and (max-width: $break-small)
+    font-size: 1.3rem
 
 .home-hero-button
   border: 2px solid var(--hero-text-color)
@@ -96,10 +113,69 @@
   text-align: center
   padding: 16px
 
+  @media screen and (max-width: $break-small)
+    padding: 0
+    width: 60%
+    min-width: 200px
+    max-width: 274px
+    font-size: 0.8rem
+
   &:hover, &:focus
     background-color: var(--hero-text-color)
     color: var(--hero-overlay-color)
     text-decoration: none
+
+.home-slideshow
+
+  .splide__slide::before
+    content: ""
+    position: absolute
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    background: var(--hero-overlay-color)
+    opacity: #{"{{ theme.hero_overlay_opacity }}"}
+    z-index: 1
+
+  .slideshow-image
+    border-radius: var(--border-radius)
+    width: 100%
+
+  .splide__arrow
+    border-radius: var(--border-radius)
+    width: 2em
+    height: 3em
+
+  .splide__pagination
+    z-index: 1
+    background: var(--pagination-background)
+    border-radius: 18px
+    display: inline-flex
+    position: relative
+    margin-top: 8px
+    bottom: auto
+    align-items: center
+    justify-content: center
+    transform: translateX(-50%)
+    left: 50%
+    padding: 4px 8px
+    gap: 2px
+    right: auto
+
+    li
+      display: flex
+
+    .splide__pagination__page
+      opacity: 1
+      background: none
+      border: 1px solid var(--pagination-page-background)
+      height: 10px
+      width: 10px
+
+      &.is-active
+        background: var(--pagination-active-page)
+        transform: scale(1.1)
 
 .home-featured-products
   margin-bottom: var(--margin-size)
