--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -185,11 +185,14 @@ a.all-products-button
   min-width: 200px
   max-width: 50%
 
-.featured-categories
-  h2
-    text-align: center
-    margin-bottom: 48px
-    font-weight: 500
+#main h1.featured-title,
+h2.featured-title
+  text-align: center
+  margin-bottom: 48px
+  font-weight: 500
+  font-size: 1.75rem
+
+  @media screen and (max-width: $break-small)
     font-size: 1.5rem
 
   .category-list
