--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -105,7 +105,7 @@ header
   @media screen and (max-width: $break-small)
     --side-padding: 16px
     padding: 32px var(--side-padding)
-    font-size: 3rem
+    font-size: 2.75rem
     line-height: normal
 
 .top-nav
@@ -113,10 +113,13 @@ header
   padding: 16px 32px
   gap: 32px
   font-size: 1.25em
-  font-weight: 600
+  font-weight: 500
   line-height: 1em
   font-family: var(--primary-font)
 
+  @media screen and (max-width: $break-medium)
+    font-size: 1em
+  
   @media screen and (max-width: $break-small)
     padding: 16px
 
