--- a/source/stylesheets/overlay.sass
+++ b/source/stylesheets/overlay.sass
@@ -47,6 +47,9 @@
   .navigation-modal-content
     padding: 0 16px
 
+    a
+      color: var(--text-color)
+
   .overlay-page-list
     text-align: left
     font-size: 1.25rem
