fix: allow images to be centered on custom pages and product descriptions

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -470,6 +470,12 @@ footer
     text-decoration: underline
     text-underline-offset: 3px
 
+  img
+    display: inline-block
+    max-width: 100%
+    margin: 0 auto
+    padding-bottom: 16px
+
 .select
   border-radius: var(--border-radius)
   position: relative
