--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -127,16 +127,19 @@
 
 .home-slideshow
 
-  .splide__slide::before
-    content: ""
-    position: absolute
-    top: 0
-    left: 0
+  .splide__slide
     width: 100%
-    height: 100%
-    background: var(--hero-overlay-color)
-    opacity: #{"{{ theme.hero_overlay_opacity }}"}
-    z-index: 1
+
+    &::before
+      content: ""
+      position: absolute
+      top: 0
+      left: 0
+      width: 100%
+      height: 100%
+      background: var(--hero-overlay-color)
+      opacity: #{"{{ theme.hero_overlay_opacity }}"}
+      z-index: 1
 
   .slideshow-image
     border-radius: var(--border-radius)
