--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -66,8 +66,15 @@
   position: relative
   width: 100%
   z-index: 2
-  opacity: #{"{{ theme.hero_overlay_opacity }}"}
   pointer-events: none
+  // Background color based on brightening or darkening
+  background: #{"{% if theme.hero_overlay_opacity == 'very_bright' or theme.hero_overlay_opacity == 'bright' %} white {% else %} black {% endif %}"}
+  // Handle each specific case
+  opacity: #{"{% if theme.hero_overlay_opacity == 'very_bright' %} 0.8 {% endif %}"}
+  opacity: #{"{% if theme.hero_overlay_opacity == 'bright' %} 0.3 {% endif %}"}
+  opacity: #{"{% if theme.hero_overlay_opacity == 'none' %} 0 {% endif %}"}
+  opacity: #{"{% if theme.hero_overlay_opacity == 'dark' %} 0.4 {% endif %}"}
+  opacity: #{"{% if theme.hero_overlay_opacity == 'very_dark' %} 0.7 {% endif %}"}
 
 .home-hero-content
   color: var(--hero-text-color)
@@ -137,9 +144,15 @@
       left: 0
       width: 100%
       height: 100%
-      background: var(--hero-overlay-color)
-      opacity: #{"{{ theme.hero_overlay_opacity }}"}
       z-index: 1
+      // Background color based on brightening or darkening
+      background: #{"{% if theme.hero_overlay_opacity == 'very_bright' or theme.hero_overlay_opacity == 'bright' %} white {% else %} black {% endif %}"}
+      // Handle each specific case
+      opacity: #{"{% if theme.hero_overlay_opacity == 'very_bright' %} 0.8 {% endif %}"}
+      opacity: #{"{% if theme.hero_overlay_opacity == 'bright' %} 0.3 {% endif %}"}
+      opacity: #{"{% if theme.hero_overlay_opacity == 'none' %} 0 {% endif %}"}
+      opacity: #{"{% if theme.hero_overlay_opacity == 'dark' %} 0.4 {% endif %}"}
+      opacity: #{"{% if theme.hero_overlay_opacity == 'very_dark' %} 0.7 {% endif %}"}
 
   .slideshow-image
     border-radius: var(--border-radius)
