fix: header and footer should use secondary font

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -115,7 +115,7 @@ header
   font-size: 1.25em
   font-weight: 500
   line-height: 1em
-  font-family: var(--primary-font)
+  font-family: var(--secondary-font)
 
   @media screen and (max-width: $break-medium)
     font-size: 1em
@@ -258,7 +258,7 @@ h1, h2, h3, h4, h5, h6
 
 footer
   padding: 64px 0
-  font-family: var(--primary-font)
+  font-family: var(--secondary-font)
   width: 100%
 
   @media screen and (max-width: $break-small)
