feat: Adds text transform option for shop header
Introduces a customizable text transform setting for the shop header, allowing users to choose between normal, uppercase, or lowercase styling. Updates relevant stylesheets to apply the selected transformation dynamically.

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -118,6 +118,9 @@ header
   line-height: 1em
   font-family: var(--secondary-font)
 
+  *
+    text-transform: #{"{{ theme.nav_text_transform }}"}
+
   @media screen and (max-width: $break-medium)
     font-size: 1em
   
