--- a/source/stylesheets/overlay.sass
+++ b/source/stylesheets/overlay.sass
@@ -58,6 +58,7 @@
     flex-direction: column
     gap: 14px
     margin: 16px 0 32px
+    text-transform: #{"{{ theme.nav_text_transform }}"}
 
     .divider
       height: 1px
