fix: all products button max width

--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -199,7 +199,10 @@
 a.all-products-button
   margin-top: 48px
   min-width: 200px
-  max-width: 50%
+  max-width: 276px
+
+  @media screen and (max-width: $break-small)
+    max-width: 100%
 
 #main h1.featured-title,
 h2.featured-title
