feat: homepage categories collage and product count overlay
Adds ability for featured categories on homepage to have collages and product count overlays

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -12,7 +12,7 @@
   --button-hover-background-color: #{'{{ theme.button_hover_background_color }}'}
   --button-text-color: #{'{{ theme.button_text_color }}'}
 
-  --category-overlay-color: #{'rgba(var(--product-hover-overlay-color-rgb), .4)'}
+  --category-overlay-color: #{'rgba(var(--product-hover-overlay-color-rgb), .5)'}
   --product-hover-overlay-color: #{'rgba(var(--product-hover-overlay-color-rgb), .8)'}
   --product-hover-text-color: #{'{{ theme.product_hover_text_color }}'}
 
@@ -676,6 +676,7 @@ button.button, a.button, div.button
     background: none
     border: 2px solid var(--text-color)
     color: var(--text-color)
+    text-align: center
 
     &:hover, &:focus
       background: none
