--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -231,3 +231,22 @@ h2.featured-title
         @media screen and (max-width: $break-small)
           max-width: 80%
           min-width: 200px
+
+// Keyframes for fade-in animation
+@keyframes fade-in
+  from
+    opacity: 0
+  to
+    opacity: 1
+
+// Styles for collage image fade-in using animation
+.collage-image
+  opacity: 1
+  // Apply animation when NOT loading
+  animation: fade-in 0.4s ease-in-out forwards
+
+  // Add a 'loading' state for when the image is not yet ready
+  // Start invisible and prevent animation from running initially
+  &.loading
+    opacity: 0
+    animation: none
