--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -94,6 +94,9 @@
   display: flex
   align-items: center
 
+  @media screen and (max-width: $break-small)
+    display: block
+
   .related-products-view-all-link
     margin-left: auto
     font-weight: 700
