chore: override browser styling on input boxes

--- a/source/stylesheets/search.sass
+++ b/source/stylesheets/search.sass
@@ -52,6 +52,10 @@
     grid-column: 1/1
     height: 50px
 
+    &:focus
+      outline: none
+      box-shadow: none
+
   .search-button
     color: var(--button-text-color)
     background: var(--button-background-color)
