--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -511,6 +511,7 @@ footer
 
   &--secondary
     display: none
+    padding-top: 20px
 
     @media screen and (max-width: $break-medium)
       display: inline
