--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -574,6 +574,12 @@ footer
     max-width: 100%
     margin: 0 auto
     padding-bottom: 16px
+  
+  iframe
+    display: block
+    margin: 0 auto
+    max-width: 100%
+    margin-bottom: 16px
 
 .select
   border-radius: var(--border-radius)
