--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -213,14 +213,15 @@ a.all-products-button
 #main h1.featured-title,
 h2.featured-title
   text-align: center
-  margin-bottom: 48px
   font-weight: 500
-  font-size: 1.75rem
+  font-size: 2rem
 
   @media screen and (max-width: $break-small)
-    font-size: 1.5rem
+    font-size: 1.75rem
 
   .category-list
+    margin-bottom: 48px
+
     &--text 
       gap: 20px
       --columns: 1
@@ -237,6 +238,49 @@ h2.featured-title
         @media screen and (max-width: $break-small)
           max-width: 80%
           min-width: 200px
+
+#main 
+  .featured-container
+    margin-bottom: 48px
+    max-width: calc(1080px + calc(var(--side-padding) * 2))
+    margin: 0 auto
+
+  .featured-message
+    text-align: center
+    margin: 20px auto 60px auto
+    padding: 0 1.5rem
+
+    ol, ul
+      text-align: left
+      margin: 1em auto
+      max-width: 600px
+      padding-left: 2.5em
+
+      ol, ul
+        margin: 0.5em 0
+        padding-left: 1.5em
+
+    ul
+      list-style: disc
+
+    ol
+      list-style: decimal
+
+    a
+      text-decoration: underline
+      text-underline-offset: 3px
+
+    img
+      display: inline-block
+      max-width: 100%
+      margin: 0 auto
+      padding-bottom: 16px
+    
+    iframe
+      display: block
+      margin: 0 auto
+      max-width: 100%
+      margin-bottom: 16px
 
 // Keyframes for fade-in animation
 @keyframes fade-in
