--- a/source/stylesheets/home.sass
+++ b/source/stylesheets/home.sass
@@ -41,6 +41,10 @@
     margin-left: auto
     margin-right: auto
     border-radius: var(--border-radius)
+    
+    // Ensure minimum height for single-image slideshows so they don't collapse the container
+    &.home-hero--slideshow .home-slideshow--single
+      min-height: 400px
 
     @media screen and (max-width: $break-small)
       border-radius: 0
@@ -145,7 +149,22 @@
     text-decoration: none
 
 .home-slideshow
-  
+  .splide__slide
+    display: flex
+    align-items: center
+    justify-content: center
+    
+  // Force height to 100% only for single image slideshows
+  &.home-slideshow--single
+    height: 100%
+    
+    .splide__track,
+    .splide__list
+      height: 100%
+    
+    .splide__slide
+      height: 100%
+
   // Always hide arrows when autoplay is enabled
   &[data-autoplay="true"]
     .splide__arrow
