--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -388,15 +388,17 @@ footer
       padding: 30px
 
 .footer-custom-content
-  display: grid
-  grid-template-columns: 1fr
-  justify-content: center
+  display: block
   text-align: center
   padding: 10px 50px 20px 50px
-  gap: 20px
 
-  > *
-    justify-self: center
+  img
+    display: block
+    margin: 20px auto
+
+  a
+    text-decoration: underline
+    text-underline-offset: 2px
 
 .footer-nav
   display: flex
