feat: add support for price suffixes for future work

--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -168,6 +168,7 @@
     min-width: 100px
     min-height: 42px
     display: flex
+    flex-direction: column
     justify-content: flex-end
     text-align: right
 
