--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -267,6 +267,9 @@ a.product-list-link
   font-size: 1rem
   font-weight: 400
 
+.price-suffix
+  white-space: nowrap
+
 .pagination
   display: flex
   align-items: center
