--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -81,7 +81,6 @@
   .option-name
     font-size: 1em
     font-weight: 400
-    margin-top: 12px
 
   input
     border: none
@@ -171,6 +170,9 @@
     flex-direction: column
     justify-content: flex-end
     text-align: right
+
+    .price-suffix
+      font-size: 0.9rem
 
     @media screen and (max-width: $break-large)
       font-size: 1.2rem
