feat: setting to shop product variant count on product grids

--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -257,15 +257,20 @@ a.product-list-link
 
 .product-list-thumb-name
   word-break: break-word
-  font-size: 1.25rem
+  font-size: 1.1rem
   font-weight: 700
 
   @media screen and (max-width: $break-small)
     font-size: 1rem
 
 .product-list-thumb-price
-  font-size: 1rem
+  font-size: 0.9rem
   font-weight: 400
+
+.product-list-thumb-options-description
+  font-size: 0.9rem
+  font-style: italic
+  margin-top: -6px
 
 .price-suffix
   white-space: nowrap
